css/ad_page.css
@import 'navbar1.css';


#leftland {
    float:left;
    width:35vw;
    top:0px;
  
}

#rightland {
    float:right;
    width:45vw;
    top:0px;
 
}



#adpage {
    background-image: url("img5.PNG");
    position: relative;
    background-repeat: repeat;
    background-position: center;
    background-size:900px;
    margin:0 auto;
    width: 90vw;
    display:block;
    height:930px;
    background-color: #e4e2f7;
    overflow:none;
    
}

#creAccBut {
    float:right;
    bottom:0px;
    right:0px;
    position: relative;
    margin-top:30px;
    
   
}

.landing_box {
    border:4px solid #9795b2;
}

#create_acc {
    width:22vw;
    background-color: white;
    padding:20px;
    left:40px;
    top:20px;
    position:relative;
    border-radius: 10px;
    float:left;
}


#box1 {
    right:40px;
    top:10vh;
    width:45vw;
    padding:20px;
    position:relative;

   
    float:right;
    background-color: white;
    border-radius: 10px;

}

#box2 {
    left:50px;
    float:left;
    top:130px;
    width:20vw;
    padding:20px;
    position:relative;
    background-color: white;
    border-radius: 10px;
    
    display:block;

}

#box3{
    top:130px;
    width:50vw;
    padding:20px;
    position:relative;
    right:40px;
    float:right;
    background-color: white;
    border-radius: 10px;
    display:block;
    margin-bottom: 40px;

}

#box4 {
    float:right;
    top:50px;
    width:20vw;
    padding:20px;
    position:relative;
    background-color: white;
    border-radius: 10px;
    display:block;
}

.ptext {
    color:#9795b2;
}

#video {
    text-align: center;
    margin:0 auto;
    padding:10px;
}

.clear {
  clear: both;
}
.button,
.nav--link {
    border-bottom-style: none;
    font-family: 'BalooBhai', sans-serif;
    text-transform: lowercase;

}

.w-button {
    display: inline-block;
    padding: 9px 15px;
    background-color: #5f59a5;
    color: #fff;
    border: 0;
    line-height: inherit;
    text-decoration: none;
    cursor: pointer;
    border-radius: 0;

}

